[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "PROJECT_NAME"
version = "v0.1"
dependencies = []
requires-python = ">= 3.8"
authors = [ {name = "Tristan Timmermans", email = "none@yourbusiness.nowhere"} ]
maintainers = [ {name = "Tristan Timmermans", email = "none@yourbusiness.nowhere"} ] 
description = "Backlight library for FlashForge Adventurer 5M useing IOCTL."
readme = "README.md"
license= = "LICENSE.md"
keywords = ["flashforge", "adventurer", "5m", "ad5m", "backlight", "adm5"]

[project.scripts]
backlight = "backlight:main"
